--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -71,13 +71,14 @@
     </FrameLayout>
 
     <LinearLayout
+        android:id="@+id/group_searched"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvTrack"
+            android:id="@+id/recyclerViewSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -129,4 +130,53 @@
             />
 
     </LinearLayout>
+
+    <!--Блок для сохраненных кликнутых песен -->
+    <LinearLayout
+        android:id="@+id/group_clicked"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            style="@style/blackAndWhiteText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:text="@string/you_searched"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="19sp"
+            android:fontFamily="@font/ys_display_regular"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewClicked"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginVertical="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/treck_item" />
+
+        <Button
+            android:id="@+id/clear_history"
+            style="@style/bottomBlackAndWhite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:text="@string/clear_history"
+            app:cornerRadius="54dp"
+            android:textSize="14sp"
+            android:fontFamily="@font/ys_display_medium"
+            android:textAllCaps="false"
+            />
+
+    </LinearLayout>
+
+
 </LinearLayout>
