--- a/app/src/main/res/layout/treck_item.xml
+++ b/app/src/main/res/layout/treck_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootLayout"
@@ -9,18 +9,6 @@
     android:paddingVertical="10dp"
     android:paddingLeft="10dp">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:background="@android:color/transparent"
-        app:icon="@drawable/arrow_forward_track"
-        app:iconGravity="end"
-        style="@style/iconTintGreyWhite" />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/ivPlaceHolderImage"
@@ -28,10 +16,14 @@
             android:layout_height="40dp"
             android:layout_gravity="start"
             android:src="@drawable/placeholder" />
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginRight="40dp"
             android:orientation="vertical"
             android:paddingHorizontal="10dp">
 
@@ -77,5 +69,16 @@
 
             </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/go_song"
+        style="@android:style/Widget.DeviceDefault.ImageButton"
+        android:layout_width="8dp"
+        android:layout_height="@dimen/size_l"
+        android:layout_gravity="end|center_vertical"
+        android:layout_marginRight="16dp"
+        android:background="@drawable/arrow_forward_track"
+        android:contentDescription="@android:string/search_go"
+        android:paddingStart="@dimen/size_xxs"
+         />
+    </FrameLayout>
+</LinearLayout>
