--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -96,7 +96,7 @@
             android:visibility="gone"
             />
         <TextView
-            android:id="@+id/zaglushka_pustoi_text"
+            android:id="@+id/nothing_was_found"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/error_not_found"
@@ -116,7 +116,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:cornerRadius="54dp"
             android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@id/zaglushka_pustoi_text"
+            app:layout_constraintTop_toBottomOf="@id/nothing_was_found"
             style="@style/bottomBlackAndWhite"
             android:text="@string/update"
             android:gravity="center_vertical|center_horizontal"
