--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_icon"
-    tools:context=".presentation.ui.MediaActivity">
+    tools:context=".player.ui.MediaActivity">
 
     <ImageView
         android:id="@+id/iv_back"
