--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="5dp"
     android:orientation="vertical"
-    tools:context=".presentation.ui.SearchActivity">
+    tools:context=".search.ui.SearchActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -95,12 +95,34 @@
             android:layout_marginTop="110dp"
             android:visibility="gone"
             />
+        <ImageView
+            android:id="@+id/zaglushka_inet_problem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/error_mode"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="110dp"
+            android:visibility="gone"
+            />
         <TextView
             android:id="@+id/nothing_was_found"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/error_not_found"
             app:layout_constraintTop_toBottomOf="@+id/zaglushka_pustoi"
+            android:gravity="center"
+            android:fontFamily="@font/ys_display_medium"
+            android:textSize="19sp"
+            android:paddingTop="16dp"
+            android:visibility="gone"
+            style="@style/blackAndWhiteText"
+            />
+        <TextView
+            android:id="@+id/text_inet_problem"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/download_failed"
+            app:layout_constraintTop_toBottomOf="@+id/zaglushka_inet_problem"
             android:gravity="center"
             android:fontFamily="@font/ys_display_medium"
             android:textSize="19sp"
