--- a/app/src/main/res/layout/activity_mediateka.xml
+++ b/app/src/main/res/layout/activity_mediateka.xml
@@ -1,6 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingHorizontal="@dimen/size_l"
+    android:paddingTop="@dimen/size_sl"
+    android:theme="@style/Theme.PlaylistMaker">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:orientation="horizontal"
+        android:paddingBottom="@dimen/size_xxxs">
+
+
+        <Button
+            android:id="@+id/bt_back"
+            style="@style/SettingBackgroundStyle"
+            android:layout_width="48dp"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            app:icon="@drawable/arrow_back" />
+
+        <TextView
+            style="@style/TextStyleMediateca"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/mediateca"
+            android:textAlignment="textStart" />
+    </LinearLayout>
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:tabTextAppearance="@style/TextTabLayoutStyle"
+        app:tabIndicatorColor="@color/text_color"
+        app:tabTextColor="@color/text_color" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
