--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_icon"
-    tools:context=".player.ui.MediaActivity">
+    tools:context=".player.ui.MediaActivity"
+    style="@style/AllBackgroundStyle">
 
     <ImageView
         android:id="@+id/iv_back"
