--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -146,8 +146,9 @@
         <item name="android:textColor">@color/white</item>
         <item name="cornerRadius">54dp</item>
     </style>
-    <style name="MediatekaBackgroundStyle">
-        <item name="android:background">@color/mediateka_background_color</item>
+
+    <style name="AllBackgroundStyle">
+        <item name="android:background">@color/white</item>
     </style>
 
 </resources>
