--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:theme="@style/Theme.PlaylistMaker"
     tools:context=".mediateka.ui.FavoriteFragment">
 
@@ -12,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="vertical"
-        android:paddingTop="104dp">
+        android:paddingTop="104dp"
+        android:visibility= "visible">
 
         <ImageView
             android:id="@+id/iv_empty_favorite"
@@ -33,6 +35,26 @@
             android:textColor="@color/text_color"
             android:text="@string/empty_library"
             android:textSize="19sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/group_favorited"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="visible">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerViewFavorited"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginVertical="@dimen/size_sl"
+            android:layout_marginTop="@dimen/size_xxl"
+            android:layout_weight="0.5"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/treck_item" />
 
     </LinearLayout>
 
